--- a/site/content/compare.html
+++ b/site/content/compare.html
@@ -1,6 +1,9 @@
 ---
 title: Me comparer
 ---
+<script>
+  document.getElementById("menu").style.display = "block";
+</script>
 <h1>Comparer ma consomation</h1>
 
 
