--- a/site/content/documents.html
+++ b/site/content/documents.html
@@ -1,6 +1,9 @@
 ---
 title: Mes documents
 ---
+<script>
+  document.getElementById("menu").style.display = "block";
+</script>
 <h1>Mes documents</h1>
 
 <div class="milieu">Vous trouverez ci-dessous tous les documents concernant votre logement.</div>
