Added error messages for the subscription form

--- a/site/content/inscription.html
+++ b/site/content/inscription.html
@@ -127,3 +127,5 @@ title: inscription
         </form>
     </div>
 </div>
+
+<div id="subscriptionErrorDisplay" style="display: none;" class="errorBox"></div>
