Started consultation impl

--- a/site/content/admin/consultation.html
+++ b/site/content/admin/consultation.html
@@ -2,4 +2,10 @@
 title: Consultation de la consommation
 ---
 <h1>Consultation de la consommation des utilisateurs</h1>
+
+<script>
+//CallGetConsultationData();
+</script>
+
+
 <div></div>
