Add export visual and change folder import

--- a/site/content/admin/import.html
+++ b/site/content/admin/import.html
@@ -1,4 +1,7 @@
-<h1>Importer un fichier</h1>
+---
+title: import de documents
+---
+<h1>Importation d'un document</h1>
 <div id="import">
   <form action="/import/file" enctype="multipart/form-data" method="post">
     <label>Sélectionnez un fichier</label><input type="file" name="file">
