Import added correct loading at start

--- a/site/content/admin/import.html
+++ b/site/content/admin/import.html
@@ -3,11 +3,9 @@ title: import de documents
 ---
 <h1>Importation d'un document</h1>
 
-<button onclick="callHousingList()" value="OK"></button>
-
 <div class="crea" id="import">
     <div class="divMilieu">
-        <form action="http://localhost:8080/api/document" enctype="multipart/form-data" method="post">
+        <form action="http://localhost:8080/document/upload" enctype="multipart/form-data" method="post">
             <label for="adminFileUpload">Sélectionner un fichier à uploader</label>
             <input type="file" name="file" id="adminFileUpload" class="inputType" />
 
@@ -15,7 +13,8 @@ title: import de documents
             <input name="title" maxlength="10" id="adminFileName" class="inputType" required />
 
             <label for="adminHousingSelect">Logement</label>
-            <select name="home" maxlength="10" id="adminHousingSelect" class="inputType" required>
+            <select name="home" maxlength="10" id="adminHousingSelect" class="inputType" required
+                onload="callHousingList()">
                 <option value="">-</option>
             </select>
 
@@ -25,5 +24,7 @@ title: import de documents
 </div>
 
 <script>
-
+    window.addEventListener('load', function () {
+        callHousingList();
+    })
 </script>
