--- a/site/content/admin/consultation.html
+++ b/site/content/admin/consultation.html
@@ -8,4 +8,17 @@ title: Consultation de la consommation
 </script>
 
 
-<div></div>
+<div>
+  <table>
+    <thead>
+    <tr>
+      <th>Date</th>
+      <th>Foyer</th>
+      <th>Energie</th>
+    </tr>
+    </thead>
+    <tbody>
+
+    </tbody>
+  </table>
+</div>
