Implemented the list of documents page

--- a/site/content/documents.html
+++ b/site/content/documents.html
@@ -2,21 +2,17 @@
 title: Mes documents
 ---
 <script>
-  document.getElementById("menu").style.display = "block";
+    document.getElementById("menu").style.display = "block";
 </script>
 <h1>Mes documents</h1>
 
 <div class="milieu">Vous trouverez ci-dessous tous les documents concernant votre logement.</div>
 
 <div id="listfiles">
-  <div class="file">
-    <img src="/imgs/pdf-svgrepo.svg" alt="fichier pdf">
-    <span>Fichier de test au format PDF</span>
-    <span>500 Ko</span>
-  </div>
-  <div class="file" onclick="alert('bonjour')">
-    <img src="/imgs/pdf-svgrepo.svg" alt="fichier pdf">
-    <span>Fichier de test au format PDF</span>
-    <span>500 Ko</span>
-  </div>
 </div>
+
+<script>
+    window.addEventListener('load', function () {
+        callUserDocumentsList();
+    })
+</script>
