--- a/site/content/_index.html
+++ b/site/content/_index.html
@@ -9,7 +9,7 @@ alias:
 <div class="divMilieu">
     Pour acceder à votre compte, veuillez vous identifier.
     <br>
-    <form name="loginForm" id="loginForm" method="post" action="http://localhost:8080/api/j_security_check">
+    <form name="loginForm" id="loginForm" method="post" action="">
         <label for="inpLogin">Identifiant</label>
         <input type="text" class="inputType" id="inpLogin" name="j_username" placeholder="Saisir votre identifiant" required>
 
@@ -20,3 +20,9 @@ alias:
         <input type="submit" class="gButton greenButton droite" value="Se connecter" onclick="submitLogin()">
     </form>
 </div>
+
+<script>
+    window.addEventListener('load', function () {
+        correctFormActionUrl("loginForm", "api/j_security_check")
+    })
+</script>
