--- a/site/content/_index.html
+++ b/site/content/_index.html
@@ -23,6 +23,6 @@ alias:
 
 <script>
     window.addEventListener('load', function () {
-        correctFormActionUrl("loginForm", "api/j_security_check")
+        correctFormActionUrl("loginForm", "j_security_check")
     })
 </script>
