--- a/site/content/consommation.html
+++ b/site/content/consommation.html
@@ -16,7 +16,7 @@ title: Ma consomation
       <input type="date" id="dateDebut">
       <label for="dateFin"> au </label>
       <input type="date" id="dateFin">
-      <input type="button" class="gButton greyButton" value="Voir" onclick="rangeConso('dateDebut','dateFin')">
+      <input type="button" class="gButton greenButton" value="Voir" onclick="rangeConso('dateDebut','dateFin')">
     </form>
 
     <div id="histogramme"></div>
