--- a/site/content/conseils.html
+++ b/site/content/conseils.html
@@ -3,7 +3,7 @@ title: Conseils
 ---
 <h1>Conseil</h1>
 <div class="barreEco">
-<p> C'est au prix de la mort d'épuisement de quelques neurones ainsi que de l'apparition de cheveux blanc (sauf pour notre camarade chauve), mais surtout avec une grande joie que nous avons participé à cet évènement qu'est Design4Green</p>
+<p>C'est au prix de la mort d'épuisement de quelques neurones ainsi que de l'apparition de cheveux blanc (sauf pour notre camarade chauve), mais surtout avec une grande joie que nous avons participé à cet évènement qu'est Design4Green.</p>
 <p>Nous vous souhaitons une bonne appréciation de notre solution et du courage pour le jugement de toutes les soumissions.</p>
-<p>Vos humbles serviteurs : Cyrille CHOPELET, Cyril MELLA, Fabien HANESSE, Alexandre VALLES et Aurore SIMON</p>
+<p>Vos humbles serviteurs : Cyrille CHOPELET, Cyril MELLA, Fabien HANESSE, Alexandre VALLES et Aurore SIMON.</p>
 </div>
