Add a pseudo-RGPD information text

--- a/site/content/inscription.html
+++ b/site/content/inscription.html
@@ -109,8 +109,15 @@ title: inscription
         <h2>Information</h2>
         <form method="POST" id="subscriptionFormRGPD">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.
+              Vos données personnelles ne sont enregistrées que dans le cadre de l'utilisation du carnet numérique.
+              Elles ne seront en aucun cas transmis à une entité externe à nos services.
+            </p>
+            <p>
+              Les données nominatives des locataires d'un bien seront supprimées lorsque ceux-ci dénonceront leur bail.
+            </p>
+            <p>
+              Le traitement de vos données personnelles sera fait avec le plus grand respect et en accord avec les conditions du Règle Général de Protection des Données,
+              et avec la loi Informatique et Liberté.
             </p>
             <div class="float-left switch">
                 <label>
