--- a/site/content/admin/consultation.html
+++ b/site/content/admin/consultation.html
@@ -4,16 +4,17 @@ title: Consultation de la consommation
 <h1>Consultation de la consommation des utilisateurs</h1>
 
 <div>
-    <table id="tableConsultAdminConsumption">
+    <table id="tableConsultAdminConsumption" class="tableMatrice">
         <thead>
             <tr>
                 <th>Date</th>
                 <th>Foyer</th>
+                <th>Chauffage</th>
                 <th>Energie</th>
             </tr>
         </thead>
         <tbody>
-
+            <tr></tr>
         </tbody>
     </table>
 </div>
