--- a/site/content/_index.html
+++ b/site/content/_index.html
@@ -9,7 +9,7 @@ alias:
 <div class="divMilieu">
     Pour acceder à votre compte, veuillez vous identifier.
     <br>
-    <form name="loginForm" id="loginForm" method="post" action="">
+    <form name="loginForm" id="loginForm" method="post" action="index.html">
         <label for="inpLogin">Identifiant</label>
         <input type="text" class="inputType" id="inpLogin" name="j_username" placeholder="Saisir votre identifiant" required>
 
