--- a/site/content/_index.html
+++ b/site/content/_index.html
@@ -3,7 +3,7 @@ title: Green l4nterne
 alias:
 - /login
 ---
-<h1>Bienvenue sur green l4nterne</h1>
+<h1>Bienvenue sur <span style="color: var(--bottom-menu-background);">green</span> l<span style="color: var(--element-highlight);">4</span><b>nterne</b></h1>
 <br />
 
 <div class="divMilieu">
