--- a/site/content/consommation.html
+++ b/site/content/consommation.html
@@ -1,7 +1,7 @@
 ---
-title: Ma consomation
+title: Ma consommation
 ---
-<h1>Ma consomation</h1>
+<h1>Ma consommation</h1>
 
 <form class="conso">
   <input type="button" class="gButtonTab greyButton" value="Mois">
